hard-gists/3264921/run.log
=== Docker Run Log for 3264921 ===
Started at: Mi 29. Okt 13:47:47 CET 2025

[2025-10-29 13:47:47] START: Running container for 3264921
[2025-10-29 13:47:47] SUCCESS: Container ff0743693cbd57f9f77f2475fb05bc42fa043238ab886359e926447f43f39a7e started for 3264921
=== Container logs for 3264921 ===
  File "/snippet.py", line 40
    print usage
    ^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3264921 ===
[2025-10-29 13:47:49] INFO: Container ff0743693cbd57f9f77f2475fb05bc42fa043238ab886359e926447f43f39a7e has stopped
